--- a/index.html
+++ b/index.html
@@ -57,53 +57,106 @@
         </div>
     </div>
 
-    <div id="batik-data-source" style="display: none;">
+<div id="batik-data-source" style="display: none;">
       
       <div id="info-parang">
         <span class="data-title">Batik Parang</span>
         <div class="data-desc">
-          <p>Batik Parang adalah salah satu motif batik klasik Indonesia yang berbentuk garis diagonal menyerupai gelombang atau huruf S berulang. Motif ini berasal dari kerajaan Mataram.</p>
+          <p>Motif parang menggambarkan jalinan yang tidak terputus, melambangkan kontinuitas.</p>
           <p><strong>Maknanya:</strong></p>
-          <ul>
-            <li>Kekuatan dan keteguhan</li>
-            <li>Semangat hidup yang tidak pernah berhenti</li>
-            <li>Perjuangan dan keberanian</li>
-            <li>Pengendalian diri</li>
-          </ul>
-          <p>Motif ini dulu hanya dipakai bangsawan dan keluarga kerajaan. Hingga sekarang, Parang menjadi simbol kebijaksanaan, wibawa, dan kekuatan karakter.</p>
+          <ul><li>Pantang menyerah</li><li>Jalinan keluarga yang erat</li></ul>
         </div>
       </div>
 
       <div id="info-kawung">
         <span class="data-title">Batik Kawung</span>
         <div class="data-desc">
-          <p>Batik Kawung adalah motif batik klasik yang berbentuk empat elips (lonjong) simetris menyerupai buah aren atau kolang-kaling. Motif ini merupakan salah satu motif tertua di Jawa.</p>
+          <p>Motif tua berbentuk buah aren yang disusun geometris.</p>
           <p><strong>Maknanya:</strong></p>
-          <ul>
-            <li>Kesucian dan kemurnian hati</li>
-            <li>Kendali diri dan kebijaksanaan</li>
-            <li>Keteraturan dan keharmonisan hidup</li>
-            <li>Kerendahan hati (karena terinspirasi dari pohon aren yang semuanya bermanfaat)</li>
-          </ul>
-          <p>Dulu, motif Kawung sering dipakai keluarga kerajaan sebagai simbol pengendalian diri dan keadilan. Hingga kini, Kawung dikenal sebagai motif batik yang sederhana namun sangat penuh filosofi.</p>
+          <ul><li>Kesucian hati</li><li>Pengendalian diri yang sempurna</li></ul>
         </div>
       </div>
 
       <div id="info-megamendung">
         <span class="data-title">Batik Megamendung</span>
         <div class="data-desc">
-          <p>Batik Megamendung adalah motif batik khas Cirebon yang berbentuk awan berlapis-lapis dengan warna gradasi, biasanya biru, merah, atau ungu.</p>
+          <p>Ikon Cirebon dengan bentuk awan yang bergulung dengan gradasi warna.</p>
           <p><strong>Maknanya:</strong></p>
-          <ul>
-            <li>Ketenangan dan kesabaran seperti awan yang membawa kesejukan</li>
-            <li>Keluasan pikiran dan sikap bijak</li>
-            <li>Kedamaian dan keseimbangan</li>
-            <li>Pengaruh budaya Tiongkok yang kuat dalam seni Cirebon</li>
-          </ul>
-          <p>Motif ini menjadi ikon Cirebon karena warna dan bentuk awannya yang unik serta filosofinya yang menekankan ketenangan hati.</p>
+          <ul><li>Ketenangan dan kesejukan</li><li>Pemimpin yang mengayomi</li></ul>
         </div>
       </div>
-    </div>
+
+      <div id="info-Ceplokbatik">
+        <span class="data-title">Batik Ceplok</span>
+        <div class="data-desc">
+          <p>Motif geometris yang berulang, seringkali menyerupai bunga mawar melingkar atau bintang.</p>
+          <p><strong>Maknanya:</strong></p>
+          <ul><li>Keteraturan hidup</li><li>Keseimbangan alam semesta</li></ul>
+        </div>
+      </div>
+
+      <div id="info-Lerengbatik">
+        <span class="data-title">Batik Lereng</span>
+        <div class="data-desc">
+          <p>Motif garis diagonal yang mirip parang namun lebih kecil dan rapat.</p>
+          <p><strong>Maknanya:</strong></p>
+          <ul><li>Kesuburan dan kemakmuran</li><li>Semangat yang membara</li></ul>
+        </div>
+      </div>
+
+      <div id="info-Nitikbatik">
+        <span class="data-title">Batik Nitik</span>
+        <div class="data-desc">
+          <p>Motif yang tersusun dari titik-titik halus membentuk pola geometris anyaman.</p>
+          <p><strong>Maknanya:</strong></p>
+          <ul><li>Kebijaksanaan</li><li>Ketelitian dan kesabaran</li></ul>
+        </div>
+      </div>
+
+      <div id="info-ParangRusakbatik">
+        <span class="data-title">Batik Parang Rusak</span>
+        <div class="data-desc">
+          <p>Varian parang yang diciptakan Panembahan Senopati saat bertapa di pantai selatan.</p>
+          <p><strong>Maknanya:</strong></p>
+          <ul><li>Pengendalian hawa nafsu</li><li>Kekuatan batin yang kuat</li></ul>
+        </div>
+      </div>
+
+      <div id="info-SekarJagadbatik">
+        <span class="data-title">Batik Sekar Jagad</span>
+        <div class="data-desc">
+          <p>Motif yang menyerupai peta dunia atau kumpulan pulau-pulau bunga.</p>
+          <p><strong>Maknanya:</strong></p>
+          <ul><li>Keindahan keberagaman dunia</li><li>Ikatan persaudaraan</li></ul>
+        </div>
+      </div>
+
+      <div id="info-Semenbatik">
+        <span class="data-title">Batik Semen</span>
+        <div class="data-desc">
+          <p>Berasal dari kata 'Semi' (tumbuh), menggambarkan tumbuhan dan gunung.</p>
+          <p><strong>Maknanya:</strong></p>
+          <ul><li>Pertumbuhan kehidupan</li><li>Kesuburan tanah</li></ul>
+        </div>
+      </div>
+
+      <div id="info-Tambalbatik">
+        <span class="data-title">Batik Tambal</span>
+        <div class="data-desc">
+          <p>Motif yang terdiri dari berbagai perca motif lain yang digabung (ditambal).</p>
+          <p><strong>Maknanya:</strong></p>
+          <ul><li>Memperbaiki hal yang rusak</li><li>Harapan akan kesembuhan (bagi orang sakit)</li></ul>
+        </div>
+      </div>
+
+      <div id="info-Truntumbatik">
+        <span class="data-title">Batik Truntum</span>
+        <div class="data-desc">
+          <p>Motif bintang kecil bertaburan di langit malam yang gelap.</p>
+          <p><strong>Maknanya:</strong></p>
+          <ul><li>Cinta yang tumbuh kembali</li><li>Kesetiaan yang abadi</li></ul>
+        </div>
+      </div>
 
     <script type="module" src="main.js"></script>
   </body>
